# haskell-modules

./: README.md  haskell-modules.cabal
builtin_packages/: builtin_rts.conf  ghc-prim-0.3.1.0-954cb57749cf319beafdc89b3415422c.conf  integer-gmp-0.5.1.0-d42e6a7874a019e6a0d1c7305ebc83c4.conf
installed_packages/: base-4.7.0.1-36e560c1fc7b874661c614da88d9615f.conf  package.cache
src/: BuiltinPackages.hs  Main.hs  haskell-modules.hs  install-package.hs
