name:                haskell-modules
version:             0.1.0.0
synopsis:            Extract real Haskell module files
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Philipp Schuster
maintainer:          pschuster@uni-koblenz.de
-- copyright:           
category:            Distribution
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable haskell-modules
  main-is:             haskell-modules.hs
  build-depends:       base >=4.6 && <4.10,
                       process >=1.4 && <1.5,
                       directory >=1.3 && <1.4,
                       filepath >=1.4 && <1.5,
                       strict >=0.3.2 && <0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded

executable install-package
  main-is:             install-package.hs
  build-depends:       base >=4.6 && <4.10,
                       process >=1.4 && <1.5,
                       directory >=1.3 && <1.4,
                       filepath >=1.4 && <1.5,
                       turtle >=1.0.2 && <1.4,
                       foldl >=1.0.7 && <1.4,
                       text >=1.2.0.3 && <1.3,
                       system-filepath >=0.4.13.2 && <0.5
  hs-source-dirs:      src
  default-language:    Haskell2010
